Add initiatives carousel section

--- a/index.html
+++ b/index.html
@@ -77,48 +77,112 @@
                 </div>
             </div>
         </section>
-        <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
+        <!-- Initiatives-->
+        <section class="projects-section bg-light" id="initiatives">
             <div class="container">
-                <!-- Featured Project Row-->
-                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/cny.jpg" alt="..." /></div>
-                    <div class="col-xl-4 col-lg-5">
-                        <div class="featured-text text-center text-lg-left">
-                            <h4>CNY Event</h4>
-                            <p class="text-black-50 mb-0">We held our first CNY event for all 4 classes to allow people to network with one another given the format of online classes. Everyone had a whale of a time in writing encouragement letters to one another in ushering in the new year.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project One Row-->
-                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
-                    <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <div id="initiatives-carousel-first-half" class="carousel slide" data-interval="false" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#initiatives-carousel-first-half" data-slide-to="0" class="active"></li>
+                        <li data-target="#initiatives-carousel-first-half" data-slide-to="1"></li>
+                        <li data-target="#initiatives-carousel-first-half" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row align-items-center">
+                                <div class="col-xl-8 col-lg-7">
+                                    <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/cny.jpg">
+                                </div>
+                                <div class="col-xl-4 col-lg-5">
+                                    <div class="featured-text text-center text-lg-left">
+                                    <h4>CNY Event</h4>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
+                                    <p class="initiatives-description text-black-50 mb-0">We held our first CNY event for all 4 classes to allow people to network with one another given the format of online classes. Everyone had a whale of a time in writing encouragement letters to one another in ushering in the new year.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row align-items-center">
+                                <div class="col-xl-8 col-lg-7">
+                                    <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/itree.jpeg">
+                                </div>
+                                <div class="col-xl-4 col-lg-5">
+                                    <div class="featured-text text-center text-lg-left">
+                                    <h4>I3 Lab</h4>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                    <p class="initiatives-description text-black-50 mb-0">A place where we call home. One place for all. To use for your projects and project meetings.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row align-items-center">
+                                <div class="col-xl-8 col-lg-7">
+                                    <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/infosysplus.jpg">
+                                </div>
+                                <div class="col-xl-4 col-lg-5">
+                                    <div class="featured-text text-center text-lg-left">
+                                    <h4>InfoSys+</h4>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                    <p class="initiatives-description text-black-50 mb-0">We held workshops about Android Studio for our batchmates in the class of 2021 to help them with their InfoSys Projects which required the development of the Android application as the final product of the module requirements.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <a class="carousel-control-prev" href="#initiatives-carousel-first-half" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#initiatives-carousel-first-half" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-                <!-- Project Two Row-->
-                <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
-                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                <br>
+                <div id="initiatives-carousel-second-half" class="carousel slide" data-interval="false" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#initiatives-carousel-second-half" data-slide-to="0" class="active"></li>
+                        <li data-target="#initiatives-carousel-second-half" data-slide-to="1"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row align-items-center">
+                                <div class="col-xl-4 col-lg-5">
+                                    <div class="featured-text-right text-center text-lg-right">
+                                    <h4>Industry Talks</h4>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                    <p class="initiatives-description text-black-50 mb-0">We are open to partner with any industry partners or student clubs who want to promote opportunities for the ISTD student body. Drop us an email at our email found in the contacts section of this website.</p>
+                                    </div>
+                                </div>
+                                <div class="col-xl-8 col-lg-7">
+                                    <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/industry_talks.jpeg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row align-items-center">
+                                <div class="col-xl-4 col-lg-5">
+                                    <div class="featured-text-right text-center text-lg-right">
+                                    <h4>Company Visits</h4>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                    <p class="initiatives-description text-black-50 mb-0">We look forward to company visits to give the student body an idea about the company. You can also drop us an email at our email found in the contact section.</p>
+                                    </div>
+                                </div>
+                                <div class="col-xl-8 col-lg-7">
+                                    <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/company_visits.png">
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <a class="carousel-control-prev" href="#initiatives-carousel-second-half" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#initiatives-carousel-second-half" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </section>
