Cleanup before updating live website

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <p class="text-black"> 
                                 The Head of Pillar Dialogue is hosted at least once per term to provide an opportunity for the student body to feedback any pillar-related issues to the ISTD's management. It could be feedbacks related to academics or the ISTD pillar. 
                                 <br><br>
-                                The summarised minutes for the past dialogues can be found on this section.
+                                The summarised minutes for the past dialogues can be found in this section.
                             </p>
                         </div>
                     </div>
