Fixed contact us button

--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <form target="_blank" rel="noopener noreferrer" class="form-inline d-flex" action="mailto:istdstudentboard2021@sutd.edu.sg">
+                                    <a target="_blank" rel="noopener noreferrer" class="d-flex" href="mailto:istdstudentboard2021@sutd.edu.sg">
                                         <button class="btn btn-primary btn-block" type="submit"><h4>istdstudentboard2021@sutd.edu.sg</h4></button>
-                                    </form>
+                                    </a>
                                 </div>
                             </div>
                         </div>
