Updated link for last salt mine

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="#hop">Read more 🡢</a></div>
+                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://hackmd.io/@h5R-ClhpQPyubny6IWlmWA/r1or6uOV_">Read more 🡢</a></div>
                                         </div>
                                     </div>
                                 </div>
