Fix colors & carousel

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row align-items-center">
-                                <div class="col-xl-8 col-lg-7">
+                                <div class="col-xl-8 col-lg-7" style="padding-right: 0;">
                                     <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/cny.jpg">
                                 </div>
-                                <div class="col-xl-4 col-lg-5">
+                                <div class="col-xl-4 col-lg-5" style="padding-left: 0;">
                                     <div class="featured-text text-center text-lg-left">
                                     <h4>CNY Event</h4>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
@@ -103,10 +103,10 @@
                         </div>
                         <div class="carousel-item">
                             <div class="row align-items-center">
-                                <div class="col-xl-8 col-lg-7">
+                                <div class="col-xl-8 col-lg-7" style="padding-right: 0;">
                                     <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/itree.jpeg">
                                 </div>
-                                <div class="col-xl-4 col-lg-5">
+                                <div class="col-xl-4 col-lg-5" style="padding-left: 0;">
                                     <div class="featured-text text-center text-lg-left">
                                     <h4>I3 Lab</h4>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
@@ -117,10 +117,10 @@
                         </div>
                         <div class="carousel-item">
                             <div class="row align-items-center">
-                                <div class="col-xl-8 col-lg-7">
+                                <div class="col-xl-8 col-lg-7" style="padding-right: 0;">
                                     <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/infosysplus.jpg">
                                 </div>
-                                <div class="col-xl-4 col-lg-5">
+                                <div class="col-xl-4 col-lg-5" style="padding-left: 0;">
                                     <div class="featured-text text-center text-lg-left">
                                     <h4>InfoSys+</h4>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
@@ -148,28 +148,28 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row align-items-center">
-                                <div class="col-xl-4 col-lg-5">
+                                <div class="col-xl-4 col-lg-5" style="padding-right: 0;">
                                     <div class="featured-text-right text-center text-lg-right">
                                     <h4>Industry Talks</h4>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                     <p class="initiatives-description text-black-50 mb-0">We are open to partner with any industry partners or student clubs who want to promote opportunities for the ISTD student body. Drop us an email at our email found in the contacts section of this website.</p>
                                     </div>
                                 </div>
-                                <div class="col-xl-8 col-lg-7">
+                                <div class="col-xl-8 col-lg-7" style="padding-left: 0;">
                                     <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/industry_talks.jpeg">
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row align-items-center">
-                                <div class="col-xl-4 col-lg-5">
+                                <div class="col-xl-4 col-lg-5" style="padding-right: 0;">
                                     <div class="featured-text-right text-center text-lg-right">
                                     <h4>Company Visits</h4>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                     <p class="initiatives-description text-black-50 mb-0">We look forward to company visits to give the student body an idea about the company. You can also drop us an email at our email found in the contact section.</p>
                                     </div>
                                 </div>
-                                <div class="col-xl-8 col-lg-7">
+                                <div class="col-xl-8 col-lg-7" style="padding-left: 0;">
                                     <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/company_visits.png">
                                 </div>
                             </div>
@@ -354,7 +354,7 @@
                 <div class="col-lg-2"></div>
                 <div class="col-lg-5">
                     <p class="text-white">
-                        This student board web portal is completely open source, supported by the OpenSUTD movement, and anyone can contribute their own pages to this domain. <a target="_blank" ref="noopener noreferrer" href="https://github.com/OpenSUTD/ISTD">Find out more here.</a>
+                        This student board web portal is completely open source, supported by the OpenSUTD movement, and anyone can contribute their own pages to this domain. Find out more <a target="_blank" ref="noopener noreferrer" href="https://github.com/OpenSUTD/ISTD">here</a>.
                     </p>
                 </div>
             </div>
@@ -362,7 +362,7 @@
                 <div class="col-12">
                     <hr class="d-none d-lg-block">
                     <p>
-                        Copyright &copy; 2021 - ISTD Student Board. To visit our old website, go <a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/old.html">here</a>
+                        Copyright &copy; 2021 - ISTD Student Board. To visit our old website, go <a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/old.html">here</a>.
                     </p>
                 </div>
             </div>
