--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
                                     </div>
                                     <div class="row">
                                         <ul>
-                                            <li>Junior feedbacks with regards to their modules in term 4.</li>
-                                            <li>Senior feedbacks with regards to their modules in term 6.</li>
-                                            <li>Issues with regards to course survey delivery on the school’s coursework website, Edimension.</li>
+                                            <li>Junior feedbacks with regards to their modules in Term 4.</li>
+                                            <li>Senior feedbacks with regards to their modules in Term 6.</li>
+                                            <li>Issues with regards to course survey delivery on the school’s coursework website, eDimension.</li>
                                         </ul>
                                     </div>
                                     <div class="row">
