Made minor edits to HOP, contact us sections

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://hackmd.io/@h5R-ClhpQPyubny6IWlmWA/r1or6uOV_">Read more 🡢</a></div>
+                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://hackmd.io/@h5R-ClhpQPyubny6IWlmWA/r1or6uOV_">Read more</a> <i class="fas fa-arrow-right"></i></div>
                                         </div>
                                     </div>
                                 </div>
@@ -264,7 +264,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/documents/hop_session/minutes_4_nov_2020.html">Read more 🡢</a></div>
+                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/documents/hop_session/minutes_4_nov_2020.html">Read more</a> <i class="fas fa-arrow-right"></i></div>
                                         </div>
                                     </div>
                                 </div>
@@ -299,7 +299,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/documents/hop_session/minutes_20_feb_2020.html">Read more 🡢</a></div>
+                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/documents/hop_session/minutes_20_feb_2020.html">Read more</a> <i class="fas fa-arrow-right"></i></div>
                                         </div>
                                     </div>
                                 </div>
@@ -316,13 +316,15 @@
                     <div class="col-md-10 mx-auto">
                         <div class="container">
                             <div class="row contact-section-top">
-                                <div class="col-sm-6 col-lg-4">
-                                    <h1 class="text-black text-sm-left">Contact us!</h1>
-                                    <hr class="d-none d-lg-block ml-0">
-                                </div>
-                                <div class="col-sm-6 col-lg-8 d-flex flex-row justify-content-md-start justify-content-center">
-                                    <img src="assets/img/contact_us_1.png">
-                                    <img src="assets/img/contact_us_2.png">
+                                <div class="col-sm-12 flex-column flex-md-row d-flex align-items-md-start justfiy-content-md-start align-items-center">
+                                    <div class="d-flex flex-column align-items-md-start align-items-center">
+                                        <h1 class="text-black text-center text-md-left">Contact us!</h1>
+                                        <hr class="d-none d-lg-block ml-0 mr-0">
+                                    </div>
+                                    <div class="d-flex flex-row justify-content-center">
+                                        <img src="assets/img/contact_us_1.png">
+                                        <img src="assets/img/contact_us_2.png">
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
