--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="theme-color" content="#157878">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="description" content="ISTD Student Board 2021 Website Homepage." />
-        <meta name="author" content="ISTD Student Board 2021" />
-        <title>ISTD Student Board 2021 | Student Initiatives & Resources</title>
-        <!-- add favicons -->
+        <meta name="description" content="ISTD Student Board Website Homepage." />
+        <meta name="author" content="ISTD Student Board" />
+        <title>ISTD Student Board | Student Initiatives & Resources</title>
+        <!-- Add Favicons -->
         <link rel="icon" type="image/x-icon" href="assets/favicons/favicon.ico" />
         <link rel="apple-touch-icon" sizes="57x57" href="assets/favicons/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="assets/favicons/apple-icon-60x60.png">
@@ -26,17 +26,17 @@
         <link rel="manifest" href="assets/favicons/manifest.json">
         <meta name="msapplication-TileColor" content="#157878">
         <meta name="msapplication-TileImage" content="assets/favicons/ms-icon-144x144.png">
-        <meta name="og:image" content="/assets/img/og_img.png">
-        <!-- Font Awesome icons (free version)-->
+        <meta name="og:image" content="assets/img/og_img.png">
+        <!-- Font Awesome Icons (Free Version) -->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
+        <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
+        <!-- Core Theme CSS (includes Bootstrap) -->
         <link href="assets/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
+        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="nav-image" src="assets/img/istd-logo.png" alt="..."></img></a>
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
+        <!-- Masthead -->
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </header>
-        <!-- About-->
+        <!-- About -->
         <section class="about-section text-center" id="about">
             <div class="container">
                 <div class="row">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <!-- Initiatives-->
+        <!-- Initiatives -->
         <section class="projects-section bg-light" id="initiatives">
             <div class="container">
                 <div id="initiatives-carousel-first-half" class="carousel slide" data-interval="false" data-ride="carousel">
@@ -186,7 +186,7 @@
                 </div>
             </div>
         </section>
-        <!-- HOP Dialogues-->
+        <!-- HOP Dialogues -->
         <section class="dialogues-section" id="hop">
             <div class="row dialogues-overall">
                 <div class="col-lg-6">
@@ -223,14 +223,14 @@
                                     </div>
                                     <div class="row">
                                         <ul>
-                                            <li>Junior feedbacks with regards to their modules in term 5.</li>
-                                            <li>Senior feedbacks with regards to their modules in term 7.</li>
+                                            <li>Junior feedbacks with regards to their modules in Term 5.</li>
+                                            <li>Senior feedbacks with regards to their modules in Term 7.</li>
                                             <li>Inquiries about the change in pillar name, as well as miscellaneous questions with regards to DAI.</li>
                                         </ul>
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://hackmd.io/@h5R-ClhpQPyubny6IWlmWA/r1or6uOV_">Read more</a> <i class="fas fa-arrow-right"></i></div>
+                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://hackmd.io/@h5R-ClhpQPyubny6IWlmWA/r1or6uOV_">Read more <i class="fas fa-arrow-right"></i></a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -264,7 +264,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/documents/hop_session/minutes_4_nov_2020.html">Read more</a> <i class="fas fa-arrow-right"></i></div>
+                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/documents/hop_session/minutes_4_nov_2020.html">Read more <i class="fas fa-arrow-right"></i></a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -299,7 +299,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/documents/hop_session/minutes_20_feb_2020.html">Read more</a> <i class="fas fa-arrow-right"></i></div>
+                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/documents/hop_session/minutes_20_feb_2020.html">Read more <i class="fas fa-arrow-right"></i></a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -309,7 +309,7 @@
                 </div>
             </div>
         </section>
-        <!-- Contact-->
+        <!-- Contact -->
         <section class="contact-section" id="contact">
             <div class="container">
                 <div class="row">
@@ -339,7 +339,7 @@
                 </div>
             </div>
         </section>
-        <!-- Notes-->
+        <!-- Notes -->
         <footer class="notes" id="notes">
             <div class="row notes-top">
                 <div class="col-1">
@@ -364,17 +364,17 @@
                 <div class="col-12">
                     <hr class="d-none d-lg-block">
                     <p>
-                        Copyright &copy; 2021 - ISTD Student Board. To visit our old website, go <a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/old.html">here</a>.
+                        Copyright &copy; 2021 - ISTD Student Board. All rights reserved. To visit our old website, go <a target="_blank" rel="noopener noreferrer" href="https://istd.opensutd.org/old.html">here</a>.
                     </p>
                 </div>
             </div>
         </footer>
-        <!-- Bootstrap core JS-->
+        <!-- Bootstrap Core JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
+        <!-- Third Party Plugin JS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-        <!-- Core theme JS-->
+        <!-- Core Theme JS -->
         <script src="assets/js/scripts.js"></script>
     </body>
 </html>
