added new notes on the degree name change

--- a/index.html
+++ b/index.html
@@ -214,6 +214,40 @@
                                 <div class="col-9">
                                     <div class="row">
                                         <div class="col-7">
+                                            <h6>Degree name change</h6>
+                                            <hr class="d-none d-lg-block ml-0">
+                                        </div>
+                                        <div class="col-5">
+                                            <div class="h7-top">29 Jul 2021</div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <ul>
+                                            <li>Justifying pillar name change for class of 2021 onwards.</li>
+                                            <li>Questions and answers with regards to degree name change.</li>
+                                            <li>The pillar name of ISTD will be retained while that of the degree name will be changed.</li>
+                                        </ul>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://hackmd.io/@D9ggjogZTzWBCxUXc2fULg/ryO3sR1yK">Read more <i class="fas fa-arrow-right"></i></a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row card-row">
+                        <div class="col-10 dialogues-right-card mx-auto">
+                            <div class="row align-items-center">
+                                <div class="col-3">
+                                    <div class="dialogues-right-card-icon mx-auto d-flex flex-row align-items-center justify-content-center">
+                                        <img src="assets/img/hop_logo_1.png">
+                                    </div>
+                                </div>
+                                <div class="col-9">
+                                    <div class="row">
+                                        <div class="col-7">
                                             <h6>ISTD Term 5/7 2021</h6>
                                             <hr class="d-none d-lg-block ml-0">
                                         </div>
