--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                                     </div>
                                     <div class="row">
                                         <ul>
-                                            <li>Justifying pillar name change for class of 2021 onwards.</li>
-                                            <li>Questions and answers with regards to degree name change.</li>
-                                            <li>The pillar name of ISTD will be retained while that of the degree name will be changed.</li>
+                                            <li>Information Systems is more business-based rather than computer science.</li>
+                                            <li>The change in the degree name will affect how the curriculum is shaped in future.</li>
+                                            <li>The pillar name of ISTD will be retained while that of the degree name will be changed to CSD.</li>
                                         </ul>
                                     </div>
                                     <div class="row">
