changed grammar and spelling

--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
                                     </div>
                                     <div class="row">
                                         <ul>
-                                            <li>Information Systems is more business-based rather than computer science.</li>
+                                            <li>The degree name is being changed from the original Information Systems Technology and Design(ISTD) to Computer Science and Design (CSD).</li>
+                                            <li>Information Systems degree are generally more business-based than Computer Science Degrees.</li>
                                             <li>The change in the degree name will affect how the curriculum is shaped in future.</li>
-                                            <li>The pillar name of ISTD will be retained while that of the degree name will be changed to CSD.</li>
+                                            <li>The pillar name of ISTD will be retained.</li>
                                         </ul>
                                     </div>
                                     <div class="row">
