Add nitpicking changes

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                 <div class="col-9">
                                     <div class="row">
                                         <div class="col-7">
-                                            <h6>Degree name change</h6>
+                                            <h6>Degree Name Change</h6>
                                             <hr class="d-none d-lg-block ml-0">
                                         </div>
                                         <div class="col-5">
@@ -223,9 +223,9 @@
                                     </div>
                                     <div class="row">
                                         <ul>
-                                            <li>The degree name is being changed from the original Information Systems Technology and Design(ISTD) to Computer Science and Design (CSD).</li>
-                                            <li>Information Systems degree are generally more business-based than Computer Science Degrees.</li>
-                                            <li>The change in the degree name will affect how the curriculum is shaped in future.</li>
+                                            <li>The degree name is being changed from the original Information Systems Technology and Design (ISTD) to Computer Science and Design (CSD).</li>
+                                            <li>Information Systems degrees are generally more business-based than Computer Science degrees.</li>
+                                            <li>The change in the degree name will affect how the curriculum is shaped in the future.</li>
                                             <li>The pillar name of ISTD will be retained.</li>
                                         </ul>
                                     </div>
