add: git with seniors writeup

--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="carousel-item">
+                            <div class="row align-items-center">
+                                <div class="col-xl-8 col-lg-7 carousel-item-left-side">
+                                    <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/Git_with_seniors.jpg">
+                                </div>
+                                <div class="col-xl-4 col-lg-5 carousel-item-right-side">
+                                    <div class="featured-text text-center text-lg-left">
+                                    <h4>Git With Seniors Workshop 2022</h4>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                    <p class="initiatives-description text-black-50 mb-0">The ISTD student board members held a workshop for the class of 2024 ISTD students during their 4th semester on 4th February 2022 to help them familiarise with Git and Github using the GUI Github desktop interface for both Windows and Mac. We also emphasised about some important points to note so that the students are able to do their projects more efficiently. The recording of the workshop can be found <a href="https://youtu.be/3Xw8up8Ou-A" target="_blank">here</a>. The workshop slides can also be found <a href="https://docs.google.com/presentation/d/1TMWoAHLj3hMtma7u2VzyS7Nk6b_Ulb8zHlaX51AUkhE/edit?usp=sharing" target="_blank">here</a>.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <a class="carousel-control-prev" href="#initiatives-carousel-first-half" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
