Added Infosys+ Android Workshop and latest HOP

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                         <li data-target="#initiatives-carousel-second-half" data-slide-to="0" class="active"></li>
                         <li data-target="#initiatives-carousel-second-half" data-slide-to="1"></li>
                         <li data-target="#initiatives-carousel-second-half" data-slide-to="2"></li>
+                        <li data-target="#initiatives-carousel-second-half" data-slide-to="3"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -189,6 +190,20 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="carousel-item">
+                            <div class="row align-items-center">
+                                <div class="col-xl-4 col-lg-5 carousel-item-left-side">
+                                    <div class="featured-text-right text-center text-lg-right">
+                                    <h4>InfoSys+ Android Workshop 2022</h4>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                    <p class="initiatives-description text-black-50 mb-0">The ISTD student board conducted a workshop on integrating an Android app with an external database for Term 4 CSD students on 25 March 2022. Topics covered include making REST API requests in Java, FastAPI and MySQL. Workshop materials can be found <a href="https://github.com/naffins/infosysPlus_android_workshop_final" target="_blank">here</a>.</p>
+                                    </div>
+                                </div>
+                                <div class="col-xl-8 col-lg-7 carousel-item-right-side">
+                                    <img class="d-block img-fluid mb-3 mb-lg-0" src="assets/img/infosys_android_workshop_2022.jpg">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <a class="carousel-control-prev" href="#initiatives-carousel-second-half" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -218,6 +233,39 @@
                     </div>
                 </div>
                 <div class="col-lg-6 dialogues-right overflow-auto">
+                    <div class="row card-row">
+                        <div class="col-10 dialogues-right-card mx-auto">
+                            <div class="row align-items-center">
+                                <div class="col-3">
+                                    <div class="dialogues-right-card-icon mx-auto d-flex flex-row align-items-center justify-content-center">
+                                        <img src="assets/img/hop_logo_1.png">
+                                    </div>
+                                </div>
+                                <div class="col-9">
+                                    <div class="row">
+                                        <div class="col-7">
+                                            <h6>ISTD Term 4/7 2022</h6>
+                                            <hr class="d-none d-lg-block ml-0">
+                                        </div>
+                                        <div class="col-5">
+                                            <div class="h7-top">11 Mar 2022</div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <ul>
+                                            <li>Feedback regarding 50.006 User Interface Design and Implementation and 50.020 Network Security courses.</li>
+                                            <li>Suggestion to have hybrid classes.</li>
+                                        </ul>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://hackmd.io/GYD4_QfDRKinwl3I2WFnrw">Read more <i class="fas fa-arrow-right"></i></a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row card-row">
                         <div class="col-10 dialogues-right-card mx-auto">
                             <div class="row align-items-center">
