Update minutes and description for last HOP

--- a/index.html
+++ b/index.html
@@ -253,13 +253,14 @@
                                     </div>
                                     <div class="row">
                                         <ul>
-                                            <li>Feedback regarding 50.006 User Interface Design and Implementation and 50.020 Network Security courses.</li>
-                                            <li>Suggestion to have hybrid classes.</li>
+                                            <li>Feedback regarding all Term 4 courses.</li>
+                                            <li>Feedback regarding Term 7 courses, specifically 50.006 User Interface Design and Implementation and 50.020 Network Security.</li>
+                                            <li>Feedback regarding general ISTD matters, including transcript change and course scheduling.</li>
                                         </ul>
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://hackmd.io/GYD4_QfDRKinwl3I2WFnrw">Read more <i class="fas fa-arrow-right"></i></a></div>
+                                            <div class="h7-bottom"><a target="_blank" rel="noopener noreferrer" href="https://sutdapac-my.sharepoint.com/:b:/g/personal/sean_gunawan_mymail_sutd_edu_sg/EZyg4wK9QDNLmBeZWDnGDDwBizxiIoYXHSlN3tlp1DDcpg?e=onMade">Read more <i class="fas fa-arrow-right"></i></a></div>
                                         </div>
                                     </div>
                                 </div>
